--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "@tensorflow/tfjs": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
